<resources>
    <string name="app_name">IOT PROJ</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="prompt_server_name">Server Name</string>
    <string name="prompt_server_password">Server Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="connect_server">Connect to kit server</string>
    <string name="no_module_connect">No modules connected</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="add_module_dialog_title">Add Module</string>
</resources>
