<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context="com.example.ongteckwu.iotproj.ModuleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_module_connect"
        android:textSize="20dp"
        android:id="@+id/no_module_text"
        android:layout_marginTop="210dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycle_view_module"
        android:layout_marginTop="42dp"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/server_login_form"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/connect_server"
            android:id="@+id/connectServerText"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/server_name_input">

            <AutoCompleteTextView
                android:id="@+id/server_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_server_name"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/server_password_input">

            <EditText
                android:id="@+id/server_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_server_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
        android:id="@+id/progressDots"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:radius="15dp"
        android:color="#22FFFFFF"
        android:visibility="gone"
        app:dd_numDots="5"
        app:dd_scaleMultiplier="2"
        app:dd_animationDuration="300"
        app:dd_horizontalSpacing="4dp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:src="@drawable/settings"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="CONNECT"
        android:id="@+id/connectButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickConnect"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoutButton"
        android:src="@drawable/logout"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickLogout"/>

</RelativeLayout>
